🐛 [FFmpeg] fixed URI handling of file paths
#3189